# scRNA-latent-AE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code_analysis/: __init__.py  a00_inventory.py  a01_dataset_profiles.py  a02_primary_d_vs_k.py  a03_cross_model.py  a04_per_dataset.py  a05_batch_effects.py  a06_splatter_validation.py  a07_statistical_significance.py  a08_training_dynamics.py  a09_elbo_analysis.py  a10_centrality_topology.py  a11_seed_stability.py  a12_metric_correlation.py  a13_phase_comparison.py  a14_publication_figures.py  analysis.sh  common.py
config/: dataset_manifest.yaml  default.yaml  large_scale.yaml  phase1_pbmc3k_quick.yaml  phase2_scvi_pbmc12k.yaml  phase3_splatter_k_sweep.yaml  phase4_aifi_scvi_nb_reduced.yaml  phase4_kidney_scvi_nb_reduced.yaml  phase4_ts1_scvi.yaml  phase4_ts2_lung_scvi_nb_reduced.yaml
jobs/: phase1_pbmc3k_quick.sbatch  phase2_scvi_pbmc12k.sbatch  phase3_full_sweep.sh  phase3_splatter_k04_pilot.sbatch  phase4_aifi_onboard_light.sh  phase4_aifi_scvi_nb_reduced.sh  phase4_ts1_onboard_light.sh  phase4_ts2_lung_onboard_light.sh  phase4_ts2_lung_scvi_nb_reduced.sh  slurm_sweep_generic.sh  smoke_test.sh  smoke_test_cpu.sh  sweep_array.sh  sweep_array_large.sh  tinygpu_analysis.sh  tinygpu_single.sh
logs/: phase1_pbmc3k_1561566.err  phase1_pbmc3k_1561566.out  phase2_pbmc12k_1561597.err  phase2_pbmc12k_1561597.out  phase3_k04_1561730.err  phase3_k04_1561730.out  slurm_aifi_onboard_1562558.err  slurm_aifi_onboard_1562558.out  slurm_aifi_onboard_1562583.out  slurm_phase3_full_sweep_1561813.err  (+47 more)
(+3161 files in other folders)
